product category page

--- a/app/assets/stylesheets/application/main.css.scss
+++ b/app/assets/stylesheets/application/main.css.scss
@@ -23,6 +23,7 @@
 @import "blocks/product";
 @import "blocks/sessions";
 @import "blocks/review";
+@import "blocks/product_category";
 
 ul.menu {
   li {
