--- a/app/views/products/includes/_single_product.html.haml
+++ b/app/views/products/includes/_single_product.html.haml
@@ -8,10 +8,10 @@
     %p.title= link_to product.title, product
     %p.price= I18n.t('views.product.with_currency', coust: product.price_with_discount)
     .b-product-ratable-with-reviews.smal
-      .ratable.read_only{ data: { score: resource.average_score } }
-      = link_to t('views.product.reviews_count', count: resource.published_reviews_count), '#', class: 'reviews-count'
+      .ratable.read_only{ data: { score: product.average_score } }
+      = link_to t('views.product.reviews_count', count: product.published_reviews_count), '#', class: 'reviews-count'
     .b-commerce
       - if user_signed_in?
-        = link_to [:add_to_wishlist, resource], remote: true, method: :post, data: { role: 'add-to-wish' } do
+        = link_to [:add_to_wishlist, product], remote: true, method: :post, data: { role: 'add-to-wish' } do
           %span icon
           = t('i_like')
