--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -15,7 +15,7 @@
       = render 'products/includes/stores', stores: @stores if @stores.present?
 
   .b-product-description
-    %h4 О товаре
+    %h4= t('about_good')
     %p= raw resource.description
 
   .b-product-tabs.tabs
@@ -37,7 +37,7 @@
           class: 'more-review', data: { more: 0, count: Settings.product.reviews_count } if resource.published_reviews_count > Settings.product.reviews_count
 
   - if @related_products.present?
-    %h4 Товары в комплект
+    %h4= t('goods_supplied')
     - @related_products.in_groups(Settings.product.related_group, false) do |group|
       .b-related-products
         = render partial: 'products/includes/single_product',
@@ -45,6 +45,6 @@
 
   - if @similar_products.present?
     .b-similar-products
-      %h4 Вам может понравиться
+      %h4= t('you_might_also_like')
       = render partial: 'products/includes/single_product',
         collection: @similar_products, as: :product, locals: { main_class: 'similar' }
