--- a/app/assets/stylesheets/application/blocks/product_category/filters.css.scss
+++ b/app/assets/stylesheets/application/blocks/product_category/filters.css.scss
@@ -4,6 +4,7 @@
   }
 
   ul {
+    margin-bottom: 20px;
     li {
       display: inline;
       padding: 3px 5px;
@@ -18,6 +19,19 @@
         background-color: $gray;
         @include border-radius(5px);
         a { border: none; }
+      }
+      i {
+        display: inline-block;
+        &.reduction {
+          @include icons-sprite('arrow-price-down');
+          width: icons-sprite-width('arrow-price-down');
+          height: icons-sprite-height('arrow-price-down');
+        }
+        &.increase {
+          @include icons-sprite('arrow-price-up');
+          width: icons-sprite-width('arrow-price-up');
+          height: icons-sprite-height('arrow-price-up');
+        }
       }
     }
   }
