--- a/app/assets/stylesheets/application/blocks/product/single_product.css.scss
+++ b/app/assets/stylesheets/application/blocks/product/single_product.css.scss
@@ -42,4 +42,27 @@
       }
     }
   }
+  &.catalog {
+    width: 100%;
+    margin-bottom: 50px;
+    &:last-child {
+      margin-bottom: 20px;
+    }
+    .e-image {
+      width: 268px;
+      height: 175px;
+      margin-right: 25px;
+    }
+    .b-info {
+      .b-info-main {
+        p {
+          margin: 0;
+          &.title {
+            margin-bottom: 10px;
+            font-size: 24px;
+          }
+        }
+      }
+    }
+  }
 }
