--- a/app/assets/stylesheets/application/base/variables.css.scss
+++ b/app/assets/stylesheets/application/base/variables.css.scss
@@ -1,7 +1,8 @@
 // VARS
-$btnBorderRadius: 7px;
-$btnBorderColor:  #898989;
-$bigInputsWidth:  466px;
+$btnBorderRadius:   7px;
+$bigInputsWidth:    466px;
+$containerWidth:    1168px;
+$catalogImageWidth: 268px;
 
 // COLORS
 $black:                 #252525;
@@ -22,6 +23,8 @@ $moderateReddishOrange: #d9593d;
 $persianGreen:          #00a388;
 $telegram:              #959595;
 $smokyWhite:            #efefef;
+
+$btnBorderColor:  #898989;
 
 .blue { color: $blue; }
 .dark-pink { color: $darkPink; }
