--- a/app/assets/stylesheets/application/blocks/product/top_information.css.scss
+++ b/app/assets/stylesheets/application/blocks/product/top_information.css.scss
@@ -10,23 +10,7 @@
   .b-product-short-info {
     width: 265px;
     margin: 0 15px 0 10px;
-    .price {
-      p {
-        margin: 0;
-        padding: 0;
-        &.new {
-          color: $moderateReddishOrange;
-          font-size: 26px;
-          margin-bottom: 10px;
-        }
-        &.old {
-          color: $dullGray;
-          font-size: 14px;
-          text-decoration: line-through;
-        }
-      }
-    }
-
+    @import "_price";
     @import "e_stores_list";
   }
 }
