--- a/app/views/product_categories/includes/_characteristic.html.haml
+++ b/app/views/product_categories/includes/_characteristic.html.haml
@@ -1,5 +1,4 @@
 %li
   %p
-    #{ characteristic.characteristic_title }:
-    %span #{ characteristic.value } (#{ characteristic.characteristic_unit })
-
+    %strong #{ characteristic.characteristic_title }:
+    #{ characteristic.value } (#{ characteristic.characteristic_unit })
