--- a/app/assets/stylesheets/application/blocks/product/single_product.css.scss
+++ b/app/assets/stylesheets/application/blocks/product/single_product.css.scss
@@ -32,7 +32,7 @@
     width: 270px;
     margin-right: 30px;
     .e-image {
-      width: 268px;
+      width: $catalogImageWidth;
       height: 175px;
     }
     .b-info {
@@ -49,18 +49,33 @@
       margin-bottom: 20px;
     }
     .e-image {
-      width: 268px;
+      width: $catalogImageWidth;
       height: 175px;
       margin-right: 25px;
     }
     .b-info {
+      width: $containerWidth - $catalogImageWidth - 27;
+      .b-info-main, .b-info-short, .b-commerce {
+        float: left;
+      }
       .b-info-main {
+        width: 410px;
+        margin-right: 90px;
         p {
-          margin: 0;
+          margin: 12px 0;
+          font-size: 14px;
+          &:first-child { margin-top: 0; }
           &.title {
             margin-bottom: 10px;
             font-size: 24px;
           }
+        }
+      }
+      .b-info-short {
+        @import "_price";
+        @import "retable_with_reviews";
+        .b-product-ratable-with-reviews {
+          margin-top: 30px;
         }
       }
     }
