--- a/app/assets/stylesheets/application/blocks/welcome.css.scss
+++ b/app/assets/stylesheets/application/blocks/welcome.css.scss
@@ -11,6 +11,7 @@
       margin: 0 27px 50px 0;
       font-size: 24px;
       max-height: 190px;
+      min-height: 190px;
       color: $deathlyIndigo;
 
       &:nth-of-type(4n){
