--- a/app/views/product_categories/show.html.haml
+++ b/app/views/product_categories/show.html.haml
@@ -9,18 +9,21 @@
     .b-filter-brands
       %ul.brands
         %span= t('brands')
-        %li.active= link_to t('all_brands'), '#', data: { id: 0 }
+        %li{ class: active_class_by_params(0, params[:brand_id].to_i) }
+          = link_to t('all_brands'), '#', data: { id: 0 }
         = render partial: 'product_categories/includes/brand', collection: @brands, as: :brand
 
     .b-filter-show
       %ul.show
         %span= t('show')
-        %li.active= link_to t('popular'), '#', data: { sort_by: 'popular' }
-        %li= link_to t('new_products'), '#', data: { sort_by: 'new_products' }
-        %li
+        %li{ class: active_class_by_params('popular', params[:sort_by].nil? ? 'popular' : params[:sort_by]) }
+          = link_to t('popular'), '#', data: { sort_by: 'popular' }
+        %li{ class: active_class_by_params('new_products', params[:sort_by]) }
+          = link_to t('new_products'), '#', data: { sort_by: 'new_products' }
+        %li{ class: active_class_by_params('price_reduction', params[:sort_by]) }
           %i.reduction
           = link_to t('product_price'), '#', data: { sort_by: 'price_reduction' }
-        %li
+        %li{ class: active_class_by_params('price_increase', params[:sort_by]) }
           %i.increase
           = link_to t('product_price'), '#', data: { sort_by: 'price_increase' }
 
