--- a/app/assets/stylesheets/application/base/variables.css.scss
+++ b/app/assets/stylesheets/application/base/variables.css.scss
@@ -23,6 +23,8 @@ $moderateReddishOrange: #d9593d;
 $persianGreen:          #00a388;
 $telegram:              #959595;
 $smokyWhite:            #efefef;
+$veryPaleBlue:          #d1d2d3;
+$smokyWhite:            #ebebeb;
 
 $btnBorderColor:  #898989;
 
