start sale product categories

--- a/app/views/shared/_banner.html.haml
+++ b/app/views/shared/_banner.html.haml
@@ -1,5 +1,5 @@
 .banner
-  = link_to '', root_path, class: 'full-block-link'
+  = link_to '', [:sale, :product_categories], class: 'full-block-link'
   = image_tag 'banner.jpg'
 
   .sale
