start static page

--- a/app/views/product_categories/includes/_sale_nested_tree.html.haml
+++ b/app/views/product_categories/includes/_sale_nested_tree.html.haml
@@ -1,4 +1,4 @@
-.categories-list.sale
-  %ul.menu
+.sale-categories-list
+  %ul.menu.sale
     %li{ class: current_page?(sale_product_categories_path) ? 'active' : nil }= link_to t('all_products'), [:sale, :product_categories]
     = build_sale_product_categories_ancestry_tree(product_categories, { active: params[:id] })
