--- a/app/assets/stylesheets/application/main.css.scss
+++ b/app/assets/stylesheets/application/main.css.scss
@@ -25,30 +25,4 @@
 @import "blocks/review";
 @import "blocks/product_category";
 
-ul.menu {
-  li {
-    &.with-children {
-      & > a {
-        text-decoration: none;
-        border-bottom: 1px dashed $blue;
-      }
-      span {
-        &.arrow {
-          color: $blue;
-          font-size: 0.625em;
-          cursor: pointer;
-        }
-      }
-      .children {
-        display: none;
-        .with-children {
-          &:hover {
-            & > .children {
-              display: block;
-            }
-          }
-        }
-      }
-    }
-  }
-}
+@import "blocks/menu";
