--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -22,32 +22,27 @@
           Кто мы
           %span.icons-arrow-black-down
         %ul.menu.left-menu
-          %li= link_to 'О нас', '#'
-          %li= link_to 'Бренды', '#'
           %li
-            = link_to 'Контакты', '#'
+            = link_to I18n.t('views.pages.about'),
+              page_path(:about),
+              class: active_class_for_page(params, 'about')
+          %li= link_to t('brands'), [:brands]
+          %li
+            = link_to I18n.t('views.pages.contacts'),
+              page_path(:contacts),
+              class: active_class_for_page(params, 'contacts')
             .help-block
               %p= @settings[:shop_phone]
               %p.pink= "#{ @settings[:shop_work_start] } - #{ @settings[:shop_work_end] }"
-          %li= link_to 'Новости', '#'
-          %li.pull-right= link_to 'Полезная информация', '#'
+          %li= link_to @news.title, @news
+          %li.pull-right= link_to @useful_information.title, @useful_information
       .pull-left.right-block
         .gray-block
           %h2
             Удобство и безопасность
             %span.icons-arrow-black-down
           %ul.menu.right-menu
-            %li= link_to 'Оплата', '#'
-            %li
-              = link_to 'Доставка', '#'
-              .help-block
-                - @settings[:delivery_cities].split(',').each do |city|
-                  %p= city
-            %li
-              = link_to 'Помощь и обратная связь', '#'
-              .help-block
-                %p.light-blue Безопасность
-                %p.light-blue Возврат денег
+            = render 'shared/includes/static_pages_links'
         .gray-block.subscribe
           %p Получить рассылку на новинки и т.д.
           = form_tag '/', class: 'inline-one-input' do
