--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -11,24 +11,19 @@
       %span.caret
   #menu.item
     %ul.menu
-      %li= link_to 'О нас', '#', class: 'active'
       %li
-        = link_to 'Контакты', '#'
+        = link_to I18n.t('views.pages.about'),
+          page_path(:about),
+          class: active_class_for_page(params, 'about')
+      %li
+        = link_to I18n.t('views.pages.contacts'),
+          page_path(:contacts),
+          class: active_class_for_page(params, 'contacts')
         .help-block
           %p= @settings[:shop_phone]
           %p.dark-pink= "#{ @settings[:shop_work_start] } - #{ @settings[:shop_work_end] }"
-      %li= link_to 'Бренды', '#'
-      %li= link_to 'Оплата', '#'
-      %li
-        = link_to 'Доставка', '#'
-        .help-block
-          - @settings[:delivery_cities].split(',').each do |city|
-            %p= city
-      %li
-        = link_to 'Помощь и обратная связь', '#'
-        .help-block
-          %p.light-blue Безопасность
-          %p.light-blue Возврат денег
+      %li= link_to t('brands'), [:brands]
+      = render 'shared/includes/static_pages_links'
 
 .container
   = render 'shared/search_bar'
