--- a/app/views/products/includes/_stores.html.haml
+++ b/app/views/products/includes/_stores.html.haml
@@ -1,4 +1,6 @@
 %ul.e-stores_list
+  %li
+    %i.icon{ class: product.in_stock ? 'in-stock' : 'out-of-stock' }
   - stores.each do |store|
     - stock = class_with_content_for_count_in_stock(store[:store].happens, store[:store_count].count)
     %li{ class: "#{ stock[:class] }" }
