--- a/app/views/devise/registrations/_sign_up_form.html.haml
+++ b/app/views/devise/registrations/_sign_up_form.html.haml
@@ -1,4 +1,4 @@
-%h3 Регистрация
+%h3= t('registration')
 = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'form' }) do |f|
   = devise_error_messages!
   .form-group
@@ -15,5 +15,7 @@
   .form-group
     = f.label :password_confirmation
     = f.password_field :password_confirmation, autocomplete: "off"
+
+  .form-group
+    = show_simple_captcha(object: 'user')
   %div= f.submit "Зарегистрироваться"
-= render "devise/shared/links"
