user registration and flash alerts

--- a/app/assets/stylesheets/application/main.css.scss
+++ b/app/assets/stylesheets/application/main.css.scss
@@ -24,5 +24,6 @@
 @import "blocks/sessions";
 @import "blocks/review";
 @import "blocks/product_category";
+@import "blocks/simple_captcha";
 
 @import "blocks/menu";
