--- a/app/assets/stylesheets/application/base/variables.css.scss
+++ b/app/assets/stylesheets/application/base/variables.css.scss
@@ -1,32 +1,32 @@
 // VARS
-$btnBorderRadius:   7px;
-$bigInputsWidth:    466px;
-$containerWidth:    1168px;
-$catalogImageWidth: 268px;
+$btnBorderRadius   : 7px;
+$bigInputsWidth    : 466px;
+$containerWidth    : 1168px;
+$catalogImageWidth : 268px;
 
 // COLORS
-$black:                 #252525;
-$blue:                  #004b8d;
-$darkGray:              #a1a1a1;
-$darkPink:              #b0276f;
-$gray:                  #ccc;
-$lightBlack:            #363636;
-$lightBlue:             #105b63;
-$lightGray:             #e4e4e4;
-$lightPink:             #ffccc2;
-$pink:                  #c93482;
-$white:                 #fff;
-$dullGray:              #636363;
-$deathlyIndigo:         #004071;
-$gainsborough:          #e1e1e1;
-$moderateReddishOrange: #d9593d;
-$persianGreen:          #00a388;
-$telegram:              #959595;
-$smokyWhite:            #efefef;
-$veryPaleBlue:          #d1d2d3;
-$smokyWhite:            #ebebeb;
+$black                 : #252525;
+$blue                  : #004b8d;
+$darkGray              : #a1a1a1;
+$darkPink              : #b0276f;
+$gray                  : #ccc;
+$lightBlack            : #363636;
+$lightBlue             : #105b63;
+$lightGray             : #e4e4e4;
+$lightPink             : #ffccc2;
+$pink                  : #c93482;
+$white                 : #fff;
+$dullGray              : #636363;
+$deathlyIndigo         : #004071;
+$gainsborough          : #e1e1e1;
+$moderateReddishOrange : #d9593d;
+$persianGreen          : #00a388;
+$telegram              : #959595;
+$smokyWhite            : #efefef;
+$veryPaleBlue          : #d1d2d3;
+$smokyWhite            : #ebebeb;
 
-$btnBorderColor:  #898989;
+$btnBorderColor        : #898989;
 
 .blue { color: $blue; }
 .dark-pink { color: $darkPink; }
@@ -35,3 +35,48 @@ $btnBorderColor:  #898989;
 
 .dark-gray-bg { background-color: $darkGray; }
 .light-gray-bg { background-color: $lightGray; }
+
+//== Form states and alerts
+//
+//## Define colors for form feedback states and, by default, alerts.
+
+$state-success-text   : #3c763d !default;
+$state-success-bg     : #dff0d8 !default;
+$state-success-border : darken(adjust-hue($state-success-bg, -10), 5%) !default;
+
+$state-info-text      : #31708f !default;
+$state-info-bg        : #d9edf7 !default;
+$state-info-border    : darken(adjust-hue($state-info-bg, -10), 7%) !default;
+
+$state-warning-text   : #8a6d3b !default;
+$state-warning-bg     : #fcf8e3 !default;
+$state-warning-border : darken(adjust-hue($state-warning-bg, -10), 5%) !default;
+
+$state-danger-text    : #a94442 !default;
+$state-danger-bg      : #f2dede !default;
+$state-danger-border  : darken(adjust-hue($state-danger-bg, -10), 5%) !default;
+
+//== Alerts
+//
+//## Define alert colors, border radius, and padding.
+$border-radius-base     : 4px !default;
+
+$alert-padding          : 15px !default;
+$alert-border-radius    : $border-radius-base !default;
+$alert-link-font-weight : bold !default;
+
+$alert-success-bg       : $state-success-bg !default;
+$alert-success-text     : $state-success-text !default;
+$alert-success-border   : $state-success-border !default;
+
+$alert-info-bg          : $state-info-bg !default;
+$alert-info-text        : $state-info-text !default;
+$alert-info-border      : $state-info-border !default;
+
+$alert-warning-bg       : $state-warning-bg !default;
+$alert-warning-text     : $state-warning-text !default;
+$alert-warning-border   : $state-warning-border !default;
+
+$alert-danger-bg        : $state-danger-bg !default;
+$alert-danger-text      : $state-danger-text !default;
+$alert-danger-border    : $state-danger-border !default;
