--- a/app/assets/stylesheets/application/global/form.css.scss
+++ b/app/assets/stylesheets/application/global/form.css.scss
@@ -3,6 +3,13 @@
     display: block;
     margin-bottom: 3px;
     font-size: 16px;
+    &.required {
+      &:after {
+        content: '\002A';
+        color: $moderateReddishOrange;
+        padding-left: 5px;
+      }
+    }
   }
 
   input[type="text"],
