--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -26,6 +26,7 @@
         = render 'shared/banner'
 
     .container
+      #flash_messages= flash_messages
       - unless current_page?(root_path)
         = render_breadcrumbs builder: ::BootstrapBreadcrumbsBuilder, separator: ' > '
 
