--- a/app/views/simple_captcha/_simple_captcha.html.haml
+++ b/app/views/simple_captcha/_simple_captcha.html.haml
@@ -1,9 +1,9 @@
-.simple_captcha
-  .simple_captcha_label
+.b-simple-captcha
+  .simple-captcha-label.required
     = simple_captcha_options[:label]
-  .simple_captcha_image
+  .simple-captcha-image
     = simple_captcha_options[:image]
-    .simple_captcha_refresh_button
+    .simple-captcha-refresh-button
       = simple_captcha_options[:refresh_button]
-  .simple_captcha_field
+  .simple-captcha-field
     = simple_captcha_options[:field]
