main menu catalog

--- a/app/assets/stylesheets/application/base/theme.css.scss
+++ b/app/assets/stylesheets/application/base/theme.css.scss
@@ -69,6 +69,7 @@ h3 {
   @import "../blocks/breadcrumbs";
   @import "../blocks/pagination";
   @include clearfix();
+  clear: both;
   ul {
     margin: 0;
     padding: 0;
