--- a/app/assets/stylesheets/application/blocks/menu.css.scss
+++ b/app/assets/stylesheets/application/blocks/menu.css.scss
@@ -53,4 +53,39 @@ ul.menu {
       }
     }
   }
+  &.main-catalog {
+    display: none;
+    position: absolute;
+    top: 35px;
+    left: -15px;
+    z-index: 10;
+    background-color: $gray;
+    padding: 40px;
+    @include border-radius(4px);
+    width: $containerWidth - 40 - 200;
+    // @include box-shadow(inset 0 3px 10px -3px rgba(50, 50, 50, 0.4));
+    li {
+      display: list-item;
+      margin-bottom: 10px;
+      a {
+        color: $blue;
+        font-size: 18px;
+        &.pink {
+          color: #c93482;
+        }
+      }
+      &.with-children {
+        & > a {
+          text-decoration: underline;
+          border: none;
+        }
+        .children {
+          display: block;
+          li {
+            margin: 5px 0;
+          }
+        }
+      }
+    }
+  }
 }
