--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -3,9 +3,13 @@
     = link_to '', root_path, class: 'full-block-link'
     .image= image_tag 'application/logo.png'
   #catalog.item
-    .btn
-      Продукция
-      %span.caret
+    - if @product_categories.any?
+      .btn
+        Продукция
+        %span.caret
+      %ul.menu.main-catalog
+        = build_product_category_ancestry_tree(@product_categories, { with_arrow: false })
+        %li= link_to 'Sale', [:sale, :product_categories], class: 'pink'
   #menu.item
     %ul.menu
       %li
