--- a/app/assets/stylesheets/application/base/variables.css.scss
+++ b/app/assets/stylesheets/application/base/variables.css.scss
@@ -1,5 +1,6 @@
 // VARS
 $btnBorderRadius   : 7px;
+$inputsWidth       : 270px;
 $bigInputsWidth    : 466px;
 $containerWidth    : 1168px;
 $catalogImageWidth : 268px;
