--- a/app/assets/stylesheets/application/main.css.scss
+++ b/app/assets/stylesheets/application/main.css.scss
@@ -25,5 +25,6 @@
 @import "blocks/review";
 @import "blocks/product_category";
 @import "blocks/simple_captcha";
+@import "blocks/user_profile";
 
 @import "blocks/menu";
