--- a/app/views/devise/registrations/_sign_up_form.html.haml
+++ b/app/views/devise/registrations/_sign_up_form.html.haml
@@ -19,4 +19,6 @@
   .form-group
     = show_simple_captcha(refresh_button_text: content_tag(:i, '', class: 'icon icon-refresh-captcha').html_safe)
 
+  = render 'devise/registrations/includes/additional_fields_for_sign_up', f: f
+
   %div= f.submit "Зарегистрироваться"
