--- a/app/assets/stylesheets/application/main.css.scss
+++ b/app/assets/stylesheets/application/main.css.scss
@@ -26,5 +26,6 @@
 @import "blocks/product_category";
 @import "blocks/simple_captcha";
 @import "blocks/user_profile";
+@import "blocks/user_wishlist";
 
 @import "blocks/menu";
