--- a/app/views/product_categories/includes/_product.html.haml
+++ b/app/views/product_categories/includes/_product.html.haml
@@ -15,12 +15,9 @@
       = price_with_discount(product)
       .b-product-ratable-with-reviews.smal
         .ratable.read_only{ data: { score: product.average_score } }
-        = link_to t('views.product.reviews_count', count: product.published_reviews_count), '#', class: 'reviews-count'
+        = link_to t('views.product.reviews_count', count: product.published_reviews_count), product_path(product, anchor: 'reviews'), class: 'reviews-count'
         %p
           %i.icon.in-stock.small
 
     .b-commerce
-      - if user_signed_in?
-        = link_to [:add_to_wishlist, product], remote: true, method: :post, data: { role: 'add-to-wish' } do
-          %span icon
-          = t('i_like')
+      = add_to_wishlist(product) if user_signed_in?
