--- a/app/assets/stylesheets/application/main.css.scss
+++ b/app/assets/stylesheets/application/main.css.scss
@@ -27,5 +27,6 @@
 @import "blocks/simple_captcha";
 @import "blocks/user_profile";
 @import "blocks/user_wishlist";
+@import "blocks/user_watched";
 
 @import "blocks/menu";
