user settings profile

--- a/app/assets/stylesheets/application/base/variables.css.scss
+++ b/app/assets/stylesheets/application/base/variables.css.scss
@@ -5,6 +5,8 @@ $bigInputsWidth    : 466px;
 $containerWidth    : 1168px;
 $catalogImageWidth : 268px;
 
+$userProfileLeftMenyWidth: 250px;
+
 // COLORS
 $black                 : #252525;
 $blue                  : #004b8d;
