--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,7 +1,4 @@
-.container.b-user-profile
-  %ul.user-profile
-    %li
-      %h2 Редактор личного профиля
-    %li
-      = link_to t('devise.sign_out'), [:destroy, :user, :session], method: :delete
-  = render 'form', user: @user
+.b-user-profile
+  = render 'users/includes/header_menu'
+  .b-user-settings-menu
+    = render 'users/includes/menu', user: @user
