user settings and help page without form

--- a/app/assets/stylesheets/application/blocks/user_profile.css.scss
+++ b/app/assets/stylesheets/application/blocks/user_profile.css.scss
@@ -25,6 +25,11 @@
           }
         }
       }
+      &.settings {
+        li {
+          margin-left: 10px;
+        }
+      }
     }
   }
   .b-user-settings-content {
