--- a/app/assets/stylesheets/application/main.css.scss
+++ b/app/assets/stylesheets/application/main.css.scss
@@ -30,5 +30,6 @@
 @import "blocks/simple_captcha";
 @import "blocks/user_profile";
 @import "blocks/user_watched";
+@import "blocks/page";
 
 @import "blocks/menu";
