--- a/app/assets/stylesheets/application/blocks/page.css.scss
+++ b/app/assets/stylesheets/application/blocks/page.css.scss
@@ -3,7 +3,8 @@
     float: left;
   }
   .b-page-feedback-form {
-    width: 40%;
+    width: 35%;
+    padding-left: 30px;
   }
   .b-page-questions {
     width: 60%;
