--- a/app/views/pages/help.html.haml
+++ b/app/views/pages/help.html.haml
@@ -16,4 +16,5 @@
           %b Создайте категорию 'Ваши вопросы' и наполните материалом
 
   .b-page-feedback-form
-    %p test form
+    %h4= t('feedback')
+    = render 'pages/feedback_form', page: resource
