--- a/app/views/products/add_to_wishlist.js.haml
+++ b/app/views/products/add_to_wishlist.js.haml
@@ -1,2 +1,2 @@
 :plain
-  $('[data-role="add-to-wish"]').replaceWith('Товар добавлен в список!')
+  $('[data-role="add-to-wish"][data-id="#{ resource.id }"]').replaceWith('Товар добавлен в список!')
