--- a/app/assets/stylesheets/application/base/helpers.css.scss
+++ b/app/assets/stylesheets/application/base/helpers.css.scss
@@ -46,6 +46,18 @@ ul.menu {
       background-color: $darkPink;
     }
   }
+  &.add-to-cart {
+    @include border-radius(5px);
+    @include box-sizing(border-box);
+    @include box-shadow(inset 2px 2px 0 0 rgba(139, 196, 203, 0.4));;
+    background-color: $addToCart;
+    border: 1px solid $btnBorderColor;
+    color: $white;
+    padding: 10px 15px;
+    &.single-product {
+      padding: 5px 10px;
+    }
+  }
 }
 
 .pull-left {
