--- a/app/assets/stylesheets/application/base/variables.css.scss
+++ b/app/assets/stylesheets/application/base/variables.css.scss
@@ -29,6 +29,7 @@ $telegram              : #959595;
 $smokyWhite            : #efefef;
 $veryPaleBlue          : #d1d2d3;
 $smokyWhite            : #ebebeb;
+$addToCart             : #3d9ca8;
 
 $btnBorderColor        : #898989;
 
