--- a/app/views/shared/_user_widget.html.haml
+++ b/app/views/shared/_user_widget.html.haml
@@ -9,7 +9,7 @@
     .panel.cart
       .icon
       .cart-items-counter 5
-      = link_to '', '#'
+      = link_to '', @cart
     .panel.profile
       .icon
         - if current_user
