--- a/app/views/product_categories/includes/_product.html.haml
+++ b/app/views/product_categories/includes/_product.html.haml
@@ -20,4 +20,10 @@
           %i.icon.in-stock.small
 
     .b-commerce
-      = add_to_wishlist(product) if user_signed_in?
+      %ul
+        %li
+          = button_to carts_products_path(product_id: resource.id), class: 'btn add-to-cart single-product' do
+            %i.icon.icon-add-to-cart
+            = t('add_to_cart')
+        %li
+          = add_to_wishlist(product) if user_signed_in?
